--- a/doc/agile/v1/sprint_backlog_12.org
+++ b/doc/agile/v1/sprint_backlog_12.org
@@ -12,30 +12,31 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-07 Thu 15:22]
+#+CAPTION: Clock summary at [2019-03-07 Thu 16:15]
 | <75>                                                         |         |       |       |       |
 | Headline                                                     | Time    |       |       |     % |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                 | *63:29* |       |       | 100.0 |
+| *Total time*                                                 | *64:19* |       |       | 100.0 |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                      | 63:29   |       |       | 100.0 |
-| Active                                                       |         | 63:29 |       | 100.0 |
+| Stories                                                      | 64:19   |       |       | 100.0 |
+| Active                                                       |         | 64:19 |       | 100.0 |
 | Edit release notes for previous sprint                       |         |       |  1:27 |   2.3 |
 | Sprint and product backlog grooming                          |         |       |  1:32 |   2.4 |
-| Implement text model generation chain in generation          |         |       |  3:45 |   5.9 |
-| Move generation model out of coding                          |         |       |  4:22 |   6.9 |
+| Implement text model generation chain in generation          |         |       |  3:45 |   5.8 |
+| Move generation model out of coding                          |         |       |  4:22 |   6.8 |
 | Rename endomodel to just model                               |         |       |  2:11 |   3.4 |
 | Remove exomodel remnants                                     |         |       |  0:03 |   0.1 |
 | Consider adding a dot graph of the transforms to probing     |         |       |  1:47 |   2.8 |
-| Split annotations processing into two phases                 |         |       |  3:10 |   5.0 |
-| Move injection processing out of coding                      |         |       | 18:39 |  29.4 |
+| Split annotations processing into two phases                 |         |       |  3:10 |   4.9 |
+| Move injection processing out of coding                      |         |       | 18:39 |  29.0 |
 | Create a extraction model post-processing chain              |         |       |  0:56 |   1.5 |
 | Move coding to generation model transform into orchestration |         |       |  0:33 |   0.9 |
 | Add option for northwind tests                               |         |       |  0:54 |   1.4 |
-| Add DTL to vcpkg                                             |         |       |  5:15 |   8.3 |
-| Remove coding options                                        |         |       |  3:59 |   6.3 |
-| Add basic "diff mode"                                        |         |       | 12:02 |  19.0 |
+| Add DTL to vcpkg                                             |         |       |  5:15 |   8.2 |
+| Remove coding options                                        |         |       |  3:59 |   6.2 |
+| Add basic "diff mode"                                        |         |       | 12:02 |  18.7 |
 | Create a "run byproducts" directory                          |         |       |  1:01 |   1.6 |
+| Logging impact in tracing is blank                           |         |       |  0:50 |   1.3 |
 | Rename the =transform= method to =apply=                     |         |       |  0:05 |   0.1 |
 | Try to fix valgrind warning on =find_files=                  |         |       |  0:20 |   0.5 |
 | Fix northwind tests on OSX and Windows                       |         |       |  1:04 |   1.7 |
@@ -824,6 +825,14 @@ Directory structure:
 - run ID
 - folder if needed, e.g. tracing. Otherwise, file: log, patch etc.
 
+*** COMPLETED Logging impact in tracing is blank                      :story:
+    CLOSED: [2019-03-07 Thu 16:14]
+    :LOGBOOK:
+    CLOCK: [2019-03-07 Thu 15:24]--[2019-03-07 Thu 16:14] =>  0:50
+    :END:
+
+This should be set to the logging level.
+
 *** STARTED Rename the =transform= method to =apply=                  :story:
     :LOGBOOK:
     CLOCK: [2019-03-04 Mon 18:25]--[2019-03-04 Mon 18:30] =>  0:05
@@ -907,10 +916,6 @@ overview of the changes and the diff to see the detail. Its painful to
 have to run dogen twice to get that view. Change the options to allow
 creating both in one go.
 
-*** Logging impact in tracing is blank                                :story:
-
-This should be set to the logging level.
-
 *** Add org mode support to diff reports                              :story:
 
 Its good to have a flat view for grepping for specific files, but its
@@ -947,7 +952,6 @@ vs transforms.
 Ideally when logging at info we want to see the spine of the program,
 showing all transforms with their start and finishes and some
 information about what they are processing (e.g. model).
-
 
 *** Rework the system tests using diff mode                           :story:
 
