--- a/doc/agile/v1/sprint_backlog_12.org
+++ b/doc/agile/v1/sprint_backlog_12.org
@@ -12,14 +12,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-07 Thu 17:24]
+#+CAPTION: Clock summary at [2019-03-07 Thu 17:30]
 | <75>                                                         |         |       |       |       |
 | Headline                                                     | Time    |       |       |     % |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                 | *65:27* |       |       | 100.0 |
+| *Total time*                                                 | *65:32* |       |       | 100.0 |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                      | 65:27   |       |       | 100.0 |
-| Active                                                       |         | 65:27 |       | 100.0 |
+| Stories                                                      | 65:32   |       |       | 100.0 |
+| Active                                                       |         | 65:32 |       | 100.0 |
 | Edit release notes for previous sprint                       |         |       |  1:27 |   2.2 |
 | Sprint and product backlog grooming                          |         |       |  1:32 |   2.3 |
 | Implement text model generation chain in generation          |         |       |  3:45 |   5.7 |
@@ -37,11 +37,11 @@
 | Add basic "diff mode"                                        |         |       | 12:02 |  18.4 |
 | Create a "run byproducts" directory                          |         |       |  1:01 |   1.6 |
 | Logging impact in tracing is blank                           |         |       |  0:50 |   1.3 |
+| Split operation reports from patches                         |         |       |  1:19 |   2.0 |
 | Rename the =transform= method to =apply=                     |         |       |  0:05 |   0.1 |
 | Try to fix valgrind warning on =find_files=                  |         |       |  0:20 |   0.5 |
 | Fix northwind tests on OSX and Windows                       |         |       |  1:04 |   1.6 |
 | Update metrics in OpenHub                                    |         |       |  0:18 |   0.5 |
-| Split operation reports from patches                         |         |       |  1:14 |   1.9 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -833,6 +833,21 @@ Directory structure:
 
 This should be set to the logging level.
 
+*** COMPLETED Split operation reports from patches                    :story:
+    CLOSED: [2019-03-07 Thu 17:28]
+    :LOGBOOK:
+    CLOCK: [2019-03-07 Thu 17:25]--[2019-03-07 Thu 17:30] =>  0:05
+    CLOCK: [2019-03-07 Thu 16:44]--[2019-03-07 Thu 17:24] =>  0:40
+    CLOCK: [2019-03-07 Thu 16:15]--[2019-03-07 Thu 16:43] =>  0:28
+    CLOCK: [2019-03-07 Thu 14:16]--[2019-03-07 Thu 14:22] =>  0:06
+    :END:
+
+We stated by making the reports mutually exclusive from patch
+generation but in truth we tend to look at both: the report to get an
+overview of the changes and the diff to see the detail. Its painful to
+have to run dogen twice to get that view. Change the options to allow
+creating both in one go.
+
 *** STARTED Rename the =transform= method to =apply=                  :story:
     :LOGBOOK:
     CLOCK: [2019-03-04 Mon 18:25]--[2019-03-04 Mon 18:30] =>  0:05
@@ -904,19 +919,6 @@ bit silly yo have to have two flags for this.
 
 For some reason our metrics are stuck at 5 months ago or so. It is
 actually mildly useful to know the number of lines of code etc.
-
-*** STARTED Split operation reports from patches                      :story:
-    :LOGBOOK:
-    CLOCK: [2019-03-07 Thu 16:44]--[2019-03-07 Thu 17:24] =>  0:40
-    CLOCK: [2019-03-07 Thu 16:15]--[2019-03-07 Thu 16:43] =>  0:28
-    CLOCK: [2019-03-07 Thu 14:16]--[2019-03-07 Thu 14:22] =>  0:06
-    :END:
-
-We stated by making the reports mutually exclusive from patch
-generation but in truth we tend to look at both: the report to get an
-overview of the changes and the diff to see the detail. Its painful to
-have to run dogen twice to get that view. Change the options to allow
-creating both in one go.
 
 *** Add org mode support to diff reports                              :story:
 
