--- a/doc/agile/v1/sprint_backlog_12.org
+++ b/doc/agile/v1/sprint_backlog_12.org
@@ -12,14 +12,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-07 Thu 17:50]
+#+CAPTION: Clock summary at [2019-03-07 Thu 18:04]
 | <75>                                                         |         |       |       |       |
 | Headline                                                     | Time    |       |       |     % |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                 | *65:51* |       |       | 100.0 |
+| *Total time*                                                 | *66:04* |       |       | 100.0 |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                      | 65:51   |       |       | 100.0 |
-| Active                                                       |         | 65:51 |       | 100.0 |
+| Stories                                                      | 66:04   |       |       | 100.0 |
+| Active                                                       |         | 66:04 |       | 100.0 |
 | Edit release notes for previous sprint                       |         |       |  1:27 |   2.2 |
 | Sprint and product backlog grooming                          |         |       |  1:32 |   2.3 |
 | Implement text model generation chain in generation          |         |       |  3:45 |   5.7 |
@@ -28,13 +28,13 @@
 | Remove exomodel remnants                                     |         |       |  0:03 |   0.1 |
 | Consider adding a dot graph of the transforms to probing     |         |       |  1:47 |   2.7 |
 | Split annotations processing into two phases                 |         |       |  3:10 |   4.8 |
-| Move injection processing out of coding                      |         |       | 18:39 |  28.3 |
+| Move injection processing out of coding                      |         |       | 18:39 |  28.2 |
 | Create a extraction model post-processing chain              |         |       |  0:56 |   1.4 |
 | Move coding to generation model transform into orchestration |         |       |  0:33 |   0.8 |
 | Add option for northwind tests                               |         |       |  0:54 |   1.4 |
-| Add DTL to vcpkg                                             |         |       |  5:15 |   8.0 |
+| Add DTL to vcpkg                                             |         |       |  5:15 |   7.9 |
 | Remove coding options                                        |         |       |  3:59 |   6.0 |
-| Add basic "diff mode"                                        |         |       | 12:02 |  18.3 |
+| Add basic "diff mode"                                        |         |       | 12:02 |  18.2 |
 | Create a "run byproducts" directory                          |         |       |  1:01 |   1.5 |
 | Logging impact in tracing is blank                           |         |       |  0:50 |   1.3 |
 | Split operation reports from patches                         |         |       |  1:19 |   2.0 |
@@ -42,7 +42,7 @@
 | Try to fix valgrind warning on =find_files=                  |         |       |  0:20 |   0.5 |
 | Fix northwind tests on OSX and Windows                       |         |       |  1:04 |   1.6 |
 | Update metrics in OpenHub                                    |         |       |  0:18 |   0.5 |
-| Add org mode support to diff reports                         |         |       |  0:19 |   0.5 |
+| Add org mode support to diff reports                         |         |       |  0:32 |   0.8 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -923,6 +923,7 @@ actually mildly useful to know the number of lines of code etc.
 
 *** STARTED Add org mode support to diff reports                      :story:
      :LOGBOOK:
+     CLOCK: [2019-03-07 Thu 17:51]--[2019-03-07 Thu 18:04] =>  0:13
      CLOCK: [2019-03-07 Thu 17:31]--[2019-03-07 Thu 17:50] =>  0:19
      :END:
 
