--- a/doc/agile/v1/sprint_backlog_12.org
+++ b/doc/agile/v1/sprint_backlog_12.org
@@ -12,37 +12,37 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-07 Thu 18:04]
+#+CAPTION: Clock summary at [2019-03-07 Thu 21:07]
 | <75>                                                         |         |       |       |       |
 | Headline                                                     | Time    |       |       |     % |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                 | *66:04* |       |       | 100.0 |
+| *Total time*                                                 | *66:45* |       |       | 100.0 |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                      | 66:04   |       |       | 100.0 |
-| Active                                                       |         | 66:04 |       | 100.0 |
+| Stories                                                      | 66:45   |       |       | 100.0 |
+| Active                                                       |         | 66:45 |       | 100.0 |
 | Edit release notes for previous sprint                       |         |       |  1:27 |   2.2 |
 | Sprint and product backlog grooming                          |         |       |  1:32 |   2.3 |
-| Implement text model generation chain in generation          |         |       |  3:45 |   5.7 |
-| Move generation model out of coding                          |         |       |  4:22 |   6.6 |
+| Implement text model generation chain in generation          |         |       |  3:45 |   5.6 |
+| Move generation model out of coding                          |         |       |  4:22 |   6.5 |
 | Rename endomodel to just model                               |         |       |  2:11 |   3.3 |
 | Remove exomodel remnants                                     |         |       |  0:03 |   0.1 |
 | Consider adding a dot graph of the transforms to probing     |         |       |  1:47 |   2.7 |
-| Split annotations processing into two phases                 |         |       |  3:10 |   4.8 |
-| Move injection processing out of coding                      |         |       | 18:39 |  28.2 |
+| Split annotations processing into two phases                 |         |       |  3:10 |   4.7 |
+| Move injection processing out of coding                      |         |       | 18:39 |  27.9 |
 | Create a extraction model post-processing chain              |         |       |  0:56 |   1.4 |
 | Move coding to generation model transform into orchestration |         |       |  0:33 |   0.8 |
-| Add option for northwind tests                               |         |       |  0:54 |   1.4 |
+| Add option for northwind tests                               |         |       |  0:54 |   1.3 |
 | Add DTL to vcpkg                                             |         |       |  5:15 |   7.9 |
 | Remove coding options                                        |         |       |  3:59 |   6.0 |
-| Add basic "diff mode"                                        |         |       | 12:02 |  18.2 |
+| Add basic "diff mode"                                        |         |       | 12:02 |  18.0 |
 | Create a "run byproducts" directory                          |         |       |  1:01 |   1.5 |
-| Logging impact in tracing is blank                           |         |       |  0:50 |   1.3 |
+| Logging impact in tracing is blank                           |         |       |  0:50 |   1.2 |
 | Split operation reports from patches                         |         |       |  1:19 |   2.0 |
+| Add org mode support to diff reports                         |         |       |  1:13 |   1.8 |
 | Rename the =transform= method to =apply=                     |         |       |  0:05 |   0.1 |
 | Try to fix valgrind warning on =find_files=                  |         |       |  0:20 |   0.5 |
 | Fix northwind tests on OSX and Windows                       |         |       |  1:04 |   1.6 |
-| Update metrics in OpenHub                                    |         |       |  0:18 |   0.5 |
-| Add org mode support to diff reports                         |         |       |  0:32 |   0.8 |
+| Update metrics in OpenHub                                    |         |       |  0:18 |   0.4 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -849,6 +849,19 @@ overview of the changes and the diff to see the detail. Its painful to
 have to run dogen twice to get that view. Change the options to allow
 creating both in one go.
 
+*** COMPLETED Add org mode support to diff reports                    :story:
+    CLOSED: [2019-03-07 Thu 21:07]
+     :LOGBOOK:
+     CLOCK: [2019-03-07 Thu 20:35]--[2019-03-07 Thu 21:07] =>  0:32
+     CLOCK: [2019-03-07 Thu 20:25]--[2019-03-07 Thu 20:34] =>  0:09
+     CLOCK: [2019-03-07 Thu 17:51]--[2019-03-07 Thu 18:04] =>  0:13
+     CLOCK: [2019-03-07 Thu 17:31]--[2019-03-07 Thu 17:50] =>  0:19
+     :END:
+
+Its good to have a flat view for grepping for specific files, but its
+not ideal when trying to get an overview of the changes. We really
+need two styles of reports: plain and org mode.
+
 *** STARTED Rename the =transform= method to =apply=                  :story:
     :LOGBOOK:
     CLOCK: [2019-03-04 Mon 18:25]--[2019-03-04 Mon 18:30] =>  0:05
@@ -920,16 +933,6 @@ bit silly yo have to have two flags for this.
 
 For some reason our metrics are stuck at 5 months ago or so. It is
 actually mildly useful to know the number of lines of code etc.
-
-*** STARTED Add org mode support to diff reports                      :story:
-     :LOGBOOK:
-     CLOCK: [2019-03-07 Thu 17:51]--[2019-03-07 Thu 18:04] =>  0:13
-     CLOCK: [2019-03-07 Thu 17:31]--[2019-03-07 Thu 17:50] =>  0:19
-     :END:
-
-Its good to have a flat view for grepping for specific files, but its
-not ideal when trying to get an overview of the changes. We really
-need two styles of reports: plain and org mode.
 
 *** Add dry mode                                                      :story:
 
