--- a/doc/agile/v1/sprint_backlog_12.org
+++ b/doc/agile/v1/sprint_backlog_12.org
@@ -12,33 +12,34 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-07 Thu 21:07]
+#+CAPTION: Clock summary at [2019-03-07 Thu 21:36]
 | <75>                                                         |         |       |       |       |
 | Headline                                                     | Time    |       |       |     % |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                 | *66:45* |       |       | 100.0 |
+| *Total time*                                                 | *67:12* |       |       | 100.0 |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                      | 66:45   |       |       | 100.0 |
-| Active                                                       |         | 66:45 |       | 100.0 |
+| Stories                                                      | 67:12   |       |       | 100.0 |
+| Active                                                       |         | 67:12 |       | 100.0 |
 | Edit release notes for previous sprint                       |         |       |  1:27 |   2.2 |
 | Sprint and product backlog grooming                          |         |       |  1:32 |   2.3 |
 | Implement text model generation chain in generation          |         |       |  3:45 |   5.6 |
 | Move generation model out of coding                          |         |       |  4:22 |   6.5 |
-| Rename endomodel to just model                               |         |       |  2:11 |   3.3 |
+| Rename endomodel to just model                               |         |       |  2:11 |   3.2 |
 | Remove exomodel remnants                                     |         |       |  0:03 |   0.1 |
 | Consider adding a dot graph of the transforms to probing     |         |       |  1:47 |   2.7 |
 | Split annotations processing into two phases                 |         |       |  3:10 |   4.7 |
-| Move injection processing out of coding                      |         |       | 18:39 |  27.9 |
+| Move injection processing out of coding                      |         |       | 18:39 |  27.8 |
 | Create a extraction model post-processing chain              |         |       |  0:56 |   1.4 |
 | Move coding to generation model transform into orchestration |         |       |  0:33 |   0.8 |
 | Add option for northwind tests                               |         |       |  0:54 |   1.3 |
-| Add DTL to vcpkg                                             |         |       |  5:15 |   7.9 |
-| Remove coding options                                        |         |       |  3:59 |   6.0 |
-| Add basic "diff mode"                                        |         |       | 12:02 |  18.0 |
+| Add DTL to vcpkg                                             |         |       |  5:15 |   7.8 |
+| Remove coding options                                        |         |       |  3:59 |   5.9 |
+| Add basic "diff mode"                                        |         |       | 12:02 |  17.9 |
 | Create a "run byproducts" directory                          |         |       |  1:01 |   1.5 |
 | Logging impact in tracing is blank                           |         |       |  0:50 |   1.2 |
 | Split operation reports from patches                         |         |       |  1:19 |   2.0 |
 | Add org mode support to diff reports                         |         |       |  1:13 |   1.8 |
+| Add dry mode                                                 |         |       |  0:27 |   0.7 |
 | Rename the =transform= method to =apply=                     |         |       |  0:05 |   0.1 |
 | Try to fix valgrind warning on =find_files=                  |         |       |  0:20 |   0.5 |
 | Fix northwind tests on OSX and Windows                       |         |       |  1:04 |   1.6 |
@@ -865,6 +866,7 @@ need two styles of reports: plain and org mode.
 *** COMPLETED Add dry mode                                            :story:
     CLOSED: [2019-03-07 Thu 21:31]
     :LOGBOOK:
+    CLOCK: [2019-03-07 Thu 21:32]--[2019-03-07 Thu 21:36] =>  0:04
     CLOCK: [2019-03-07 Thu 21:08]--[2019-03-07 Thu 21:31] =>  0:23
     :END:
 
