--- a/doc/agile/v1/sprint_backlog_12.org
+++ b/doc/agile/v1/sprint_backlog_12.org
@@ -6,45 +6,46 @@
 * Mission Statement
 
 - resolve the refactoring problem with lots of duplicated types.
+- reactivate system testing.
 
 * Stories
 
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-08 Fri 07:20]
+#+CAPTION: Clock summary at [2019-03-08 Fri 11:39]
 | <75>                                                         |         |       |       |       |
 | Headline                                                     | Time    |       |       |     % |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                 | *68:19* |       |       | 100.0 |
+| *Total time*                                                 | *71:22* |       |       | 100.0 |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                      | 68:19   |       |       | 100.0 |
-| Active                                                       |         | 68:19 |       | 100.0 |
-| Edit release notes for previous sprint                       |         |       |  1:27 |   2.1 |
-| Sprint and product backlog grooming                          |         |       |  1:32 |   2.2 |
-| Implement text model generation chain in generation          |         |       |  3:45 |   5.5 |
-| Move generation model out of coding                          |         |       |  4:22 |   6.4 |
-| Rename endomodel to just model                               |         |       |  2:11 |   3.2 |
+| Stories                                                      | 71:22   |       |       | 100.0 |
+| Active                                                       |         | 71:22 |       | 100.0 |
+| Edit release notes for previous sprint                       |         |       |  1:27 |   2.0 |
+| Sprint and product backlog grooming                          |         |       |  1:32 |   2.1 |
+| Implement text model generation chain in generation          |         |       |  3:45 |   5.3 |
+| Move generation model out of coding                          |         |       |  4:22 |   6.1 |
+| Rename endomodel to just model                               |         |       |  2:11 |   3.1 |
 | Remove exomodel remnants                                     |         |       |  0:03 |   0.1 |
-| Consider adding a dot graph of the transforms to probing     |         |       |  1:47 |   2.6 |
-| Split annotations processing into two phases                 |         |       |  3:10 |   4.6 |
-| Move injection processing out of coding                      |         |       | 18:39 |  27.3 |
-| Create a extraction model post-processing chain              |         |       |  0:56 |   1.4 |
+| Consider adding a dot graph of the transforms to probing     |         |       |  1:47 |   2.5 |
+| Split annotations processing into two phases                 |         |       |  3:10 |   4.4 |
+| Move injection processing out of coding                      |         |       | 18:39 |  26.1 |
+| Create a extraction model post-processing chain              |         |       |  0:56 |   1.3 |
 | Move coding to generation model transform into orchestration |         |       |  0:33 |   0.8 |
 | Add option for northwind tests                               |         |       |  0:54 |   1.3 |
-| Add DTL to vcpkg                                             |         |       |  5:15 |   7.7 |
-| Remove coding options                                        |         |       |  3:59 |   5.8 |
-| Add basic "diff mode"                                        |         |       | 12:02 |  17.6 |
-| Create a "run byproducts" directory                          |         |       |  1:01 |   1.5 |
+| Add DTL to vcpkg                                             |         |       |  5:15 |   7.4 |
+| Remove coding options                                        |         |       |  3:59 |   5.6 |
+| Add basic "diff mode"                                        |         |       | 12:02 |  16.9 |
+| Create a "run byproducts" directory                          |         |       |  1:01 |   1.4 |
 | Logging impact in tracing is blank                           |         |       |  0:50 |   1.2 |
-| Split operation reports from patches                         |         |       |  1:19 |   1.9 |
-| Add org mode support to diff reports                         |         |       |  1:13 |   1.8 |
-| Add dry mode                                                 |         |       |  0:27 |   0.7 |
+| Split operation reports from patches                         |         |       |  1:19 |   1.8 |
+| Add org mode support to diff reports                         |         |       |  1:13 |   1.7 |
+| Add dry mode                                                 |         |       |  0:27 |   0.6 |
 | Rename the =transform= method to =apply=                     |         |       |  0:05 |   0.1 |
 | Try to fix valgrind warning on =find_files=                  |         |       |  0:20 |   0.5 |
-| Fix northwind tests on OSX and Windows                       |         |       |  1:04 |   1.6 |
+| Fix northwind tests on OSX and Windows                       |         |       |  1:04 |   1.5 |
 | Update metrics in OpenHub                                    |         |       |  0:18 |   0.4 |
-| Rework the system tests using diff mode                      |         |       |  1:07 |   1.6 |
+| Rework the system tests using diff mode                      |         |       |  4:10 |   5.8 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -949,6 +950,8 @@ actually mildly useful to know the number of lines of code etc.
 
 *** STARTED Rework the system tests using diff mode                   :story:
     :LOGBOOK:
+    CLOCK: [2019-03-08 Fri 09:27]--[2019-03-08 Fri 11:39] =>  2:12
+    CLOCK: [2019-03-08 Fri 08:35]--[2019-03-08 Fri 09:26] =>  0:51
     CLOCK: [2019-03-08 Fri 06:13]--[2019-03-08 Fri 07:20] =>  1:07
     :END:
 
