--- a/doc/agile/v1/sprint_backlog_12.org
+++ b/doc/agile/v1/sprint_backlog_12.org
@@ -13,17 +13,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-08 Fri 11:39]
+#+CAPTION: Clock summary at [2019-03-08 Fri 11:50]
 | <75>                                                         |         |       |       |       |
 | Headline                                                     | Time    |       |       |     % |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                 | *71:22* |       |       | 100.0 |
+| *Total time*                                                 | *71:32* |       |       | 100.0 |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                      | 71:22   |       |       | 100.0 |
-| Active                                                       |         | 71:22 |       | 100.0 |
+| Stories                                                      | 71:32   |       |       | 100.0 |
+| Active                                                       |         | 71:32 |       | 100.0 |
 | Edit release notes for previous sprint                       |         |       |  1:27 |   2.0 |
 | Sprint and product backlog grooming                          |         |       |  1:32 |   2.1 |
-| Implement text model generation chain in generation          |         |       |  3:45 |   5.3 |
+| Implement text model generation chain in generation          |         |       |  3:45 |   5.2 |
 | Move generation model out of coding                          |         |       |  4:22 |   6.1 |
 | Rename endomodel to just model                               |         |       |  2:11 |   3.1 |
 | Remove exomodel remnants                                     |         |       |  0:03 |   0.1 |
@@ -33,9 +33,9 @@
 | Create a extraction model post-processing chain              |         |       |  0:56 |   1.3 |
 | Move coding to generation model transform into orchestration |         |       |  0:33 |   0.8 |
 | Add option for northwind tests                               |         |       |  0:54 |   1.3 |
-| Add DTL to vcpkg                                             |         |       |  5:15 |   7.4 |
+| Add DTL to vcpkg                                             |         |       |  5:15 |   7.3 |
 | Remove coding options                                        |         |       |  3:59 |   5.6 |
-| Add basic "diff mode"                                        |         |       | 12:02 |  16.9 |
+| Add basic "diff mode"                                        |         |       | 12:02 |  16.8 |
 | Create a "run byproducts" directory                          |         |       |  1:01 |   1.4 |
 | Logging impact in tracing is blank                           |         |       |  0:50 |   1.2 |
 | Split operation reports from patches                         |         |       |  1:19 |   1.8 |
@@ -46,6 +46,7 @@
 | Fix northwind tests on OSX and Windows                       |         |       |  1:04 |   1.5 |
 | Update metrics in OpenHub                                    |         |       |  0:18 |   0.4 |
 | Rework the system tests using diff mode                      |         |       |  4:10 |   5.8 |
+| Split extraction model generation from code generation       |         |       |  0:10 |   0.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -989,7 +990,7 @@ Notes:
 
 *** STARTED Split extraction model generation from code generation    :story:
     :LOGBOOK:
-    CLOCK: [2019-03-08 Fri 11:40]
+    CLOCK: [2019-03-08 Fri 11:40]--[2019-03-08 Fri 11:50] =>  0:10
     :END:
 
 In order to make the models testable, we need access to the extraction
